--- a/src/main/resources/templates/subcategory-details.html
+++ b/src/main/resources/templates/subcategory-details.html
@@ -46,7 +46,8 @@
                             <ul class="d-flex flex-row align-items-start justify-content-start text-center">
                                 <li><a th:href="@{/}">Home</a></li>
                                 <li><a th:href="@{/admin-panel}">Panel</a></li>
-                                <li th:text="${categoryBreadcrumb.getName()}"></li>
+                                <li><a th:href="@{/category-details/{id}(id=${categoryBreadcrumb.getId()})}"
+                                       th:text="${categoryBreadcrumb.getName()}"></a></li>
                                 <li th:each="subcategory : ${subcategoriesBreadcrumbs}">
                                     <a style="color: #fbaa1d"
                                        th:href="@{/subcategory-details/{id}(id=${subcategory.getId()})}"
