--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -196,7 +196,7 @@
                     <a th:href="@{/admin-panel}" style="line-height: 40px">Panel</a>
                 </div>
                 <div sec:authorize="isAuthenticated()">
-                    <a href="/profile" style="line-height: 40px">Profile</a>
+                    <a th:href="@{/profile}" style="line-height: 40px">Profile</a>
                     <a th:href="@{/perform_logout}" style="line-height: 40px">Logout</a>
                 </div>
             </div>
