category name showing added to admin panel campaign page

--- a/src/main/resources/templates/admin_panel/_campaign.html
+++ b/src/main/resources/templates/admin_panel/_campaign.html
@@ -202,7 +202,7 @@
                                 </div>
                                 <div class="col-lg-2 col-md-3 col-xs-6">
                                     <div class="profile-order-text">
-                                        <td th:text="${'sgs'}"></td>
+                                        <td th:text="${campaign.getCategoryName()}"></td>
                                     </div>
                                 </div>
 
