--- a/src/main/resources/templates/campaign-details.html
+++ b/src/main/resources/templates/campaign-details.html
@@ -151,7 +151,7 @@
                                 <div class="col-lg-9">
                                     <!-- Category -->
                                     <div class="tab-content-text">
-                                        <h th:text="${campaign.getCategories().get(0).getName()}"></h>
+                                        <h th:text="${campaign.getCategoryName()}"></h>
                                     </div>
                                 </div>
                             </div>
