redirection link to home page edited

--- a/src/main/resources/templates/thank-you.html
+++ b/src/main/resources/templates/thank-you.html
@@ -37,7 +37,7 @@
                         <span class="icon-check_circle display-3 text-success"></span>
                         <h2 class="display-3 text-black">Thank you!</h2>
                         <p class="lead mb-5">Your order was successfully completed.</p>
-                        <div class="checkout_button trans_200"><a href="index.html">Back to shop</a></div>
+                        <div class="checkout_button trans_200"><a href="/">Back to shop</a></div>
                     </div>
                     <div class="col-md-3 text-center"></div>
                 </div>
